# django-payments-khipu

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests_coverage.yml  tests_release.yml
api/: index.html
django_payments_khipu/: KhipuProvider.py
docs/: api.md  index.md  instalacion.md  uso.md
search/: search_index.json
tests/: conftest.py  django_settings.py  factories.py  test_app.py  test_khipuprovider.py
uso/: index.html
